# eden

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
crates/eden/: Cargo.toml
crates/eden-api-server/: Cargo.toml
crates/eden-api-server/src/: error.rs  lib.rs
crates/eden-api-server/src/routes/: sessions.rs
crates/eden-api-types/: Cargo.toml
crates/eden-api-types/src/: internal.rs  lib.rs
crates/eden-api-types/src/common/: mod.rs
crates/eden-api-types/src/sessions/: mod.rs
crates/eden-api-types/tests/: serialization.rs
crates/eden-api-types/tests/serialization/: common.rs  sessions.rs
crates/eden-api-types/tests/serialization/snapshots/: serialization__common__error.snap  serialization__common__member_discord_info.snap  serialization__sessions__granted_request_session_response.snap  serialization__sessions__rejected_request_session_response.snap  serialization__sessions__request_session.snap
crates/eden-background-worker/: Cargo.toml
crates/eden-background-worker/src/: background_job.rs  job_stream.rs  lib.rs  registry.rs  worker.rs
crates/eden-background-worker/src/runner/: job_distributor.rs  mod.rs
crates/eden-common/: Cargo.toml
crates/eden-common/src/: bootstrap.rs  lib.rs  testing.rs
crates/eden-common/src/path/: mod.rs
crates/eden-common/src/signals/: mod.rs
crates/eden-config/: Cargo.toml  eden.template.toml
crates/eden-config/src/: error.rs  lib.rs  root.rs  validate.rs
crates/eden-config/src/editable/: mod.rs
crates/eden-config/src/sections/: mod.rs  sentry.rs
crates/eden-config/tests/: common.rs  editable.rs  validation.rs
crates/eden-config/tests/snapshots/: editable__defaults.snap  editable__should_edit_and_save.snap
crates/eden-database/: Cargo.toml
crates/eden-database/src/: lib.rs  pools.rs  settings.rs  testing.rs  timestamp.rs
crates/eden-database/src/background_job/: mod.rs  tests.rs
crates/eden-database/src/migrations/: mod.rs
crates/eden-database/src/primary_guild/: chaos.rs  contributor.rs  linked_mc_account.rs  logged_in_event.rs  mc_account_challenge.rs  member.rs  minecraft.rs  minecraft_account.rs  mod.rs  registered_player.rs  staff.rs
crates/eden-database/src/snowflake/: mod.rs
crates/eden-database/src/views/: mc_account.rs  member.rs  mod.rs
crates/eden-discord-bot/: Cargo.toml
crates/eden-discord-bot/src/: constants.rs  lib.rs
crates/eden-discord-bot/src/event/: context.rs  guild_create.rs  member_update.rs  mod.rs  ready.rs
crates/eden-discord-bot/src/primary_guild/: mod.rs
crates/eden-discord-bot/src/triggers/: chaosneco.rs  registry.rs  solve_mc_account_challenge.rs  swearing_police.rs
crates/eden-gateway-server/: Cargo.toml
crates/eden-gateway-server/src/: lib.rs  main.rs  router.rs
crates/eden-gateway-server/src/controllers/: metrics.rs  mod.rs
crates/eden-gateway-server/src/errors/: mod.rs
crates/eden-gateway-server/src/middleware/: .process_error.rs.pending-snap  collect_metrics.rs  extract_client_ip.rs  mod.rs  normalize_error.rs  process_error.rs  requires_auth.rs  trace_request.rs
crates/eden-gateway-server/src/model/: mod.rs
crates/eden-gateway-server/src/ratelimiter/: mod.rs
crates/eden-gateway-server/src/result/: erased_report.rs  mod.rs  tests.rs
crates/eden-http-api/: Cargo.toml
crates/eden-kernel/: Cargo.toml
crates/eden-kernel/src/: lib.rs
crates/eden-prometheus/: Cargo.toml
crates/eden-prometheus/src/: instance.rs  lib.rs  macros.rs
crates/eden-sentry/: Cargo.toml
crates/eden-sentry/src/: lib.rs  report.rs
crates/eden-sentry/src/snapshots/: eden_sentry__report__tests__event_from_report.snap  eden_sentry__report__tests__event_from_report.snap.new
crates/eden-sqlite/: Cargo.toml
crates/eden-sqlite/src/: config.rs  error.rs  lib.rs  pool.rs
crates/eden-text-handling/: Cargo.toml
crates/eden-text-handling/assets/: README.md  lorem-4000-chars.txt  orchard-street-medium.txt  swearing-text.txt
crates/eden-text-handling/benches/: processing.rs  swearing.rs
crates/eden-text-handling/src/: discord.rs  lib.rs
crates/eden-text-handling/src/generator/: mod.rs
crates/eden-text-handling/src/markdown/: mod.rs
crates/eden-text-handling/src/swearing/: mod.rs
crates/eden-timestamp/: Cargo.toml
crates/eden-timestamp/src/: lib.rs
crates/eden-timestamps/: Cargo.toml
crates/eden-timestamps/src/: error.rs  lib.rs  sqlx.rs
crates/eden-toml/: Cargo.toml
crates/eden-toml/src/: error.rs  lib.rs
crates/eden-toml/src/snapshots/: eden_toml__tests__diagnostic_emit.snap
crates/eden-twilight/: Cargo.toml
crates/eden-twilight/src/: http.rs  lib.rs
crates/eden-utils/: Cargo.toml
crates/eden-utils/src/: bootstrap.rs  lib.rs  path.rs
crates/eden-utils/src/futures/: catch_unwind.rs  mod.rs
crates/eden-utils/src/minecraft/: mod.rs
crates/eden-validation/: Cargo.toml
crates/eden-validation/src/: lib.rs  minecraft.rs
crates/eden/src/: bootstrap.rs  main.rs
crates/eden/src/bootstrap/: generate.rs  mod.rs
crates/erased-report/: Cargo.toml
crates/erased-report/src/: lib.rs
src/core/: Cargo.toml
src/core/src/: kernel.rs  lib.rs
src/core/src/discord/: mod.rs
src/core/src/jobs/: mod.rs
src/core/src/jobs/events/: mod.rs  (+1 more)
src/eden/: Cargo.toml
src/eden/src/: bootstrap.rs  main.rs
src/gateway-api/: Cargo.toml
src/gateway-api/src/: lib.rs  member.rs
src/gateway-api/src/admin/: members.rs  mod.rs  settings.rs
src/gateway-api/src/alerts/: admin_commands.rs
src/gateway-api/src/convert/: mc_account.rs  member.rs  mod.rs
src/gateway-api/src/members/: mod.rs
src/gateway-api/src/minecraft/: block_pos.rs  dimension.rs
src/gateway-api/src/sessions/: mod.rs  request.rs  validate.rs
src/gateway-api/src/settings/: mod.rs
src/gateway-server/: Cargo.toml
src/gateway-server/src/: extract.rs  lib.rs  router.rs
src/gateway-server/src/controllers/: mod.rs
src/gateway-server/src/errors/: mod.rs  tests.rs
src/gateway-server/src/middleware/: mod.rs  normalize_error.rs
src/gateway-server/src/ratelimiter/: mod.rs
xtask/: Cargo.toml
xtask/src/: flags.rs  main.rs
xtask/src/docker/: build.rs  mod.rs
(+89 files in other folders)
