[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.2.0-alpha.0"
authors = ["memothelemo <dev@memothelemo.xyz>"]
edition = "2024"
license = "AGPL-2.0"
repository = "https://github.com/memothelemo/eden"

[workspace.dependencies]
# Data types
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }

# Error handling
error-stack = "0.6.0"
thiserror = "2.0.18"

# Testing
criterion = { default-features = false, version = "0.5" }
insta = "1.46.3"
pretty_assertions = "1.4.1"
tempfile = "3.25.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml_edit = { version = "0.25.3", features = ["serde"] }

# Async crates
futures = "0.3.32"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }

# RNGs
rand = "0.10.0"

# Twilight ecosystem
twilight-cache-inmemory = "0.17.1"
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-mention = "0.17.0"
twilight-model = "0.17.1"

# Tracing & diagnostics
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Useful helpers
bon = "3.9.0"
unindent = "0.2.4"

[workspace.dependencies.sqlx]
version = "0.8.6"
features = [
    "chrono",
    "migrate",
    "runtime-tokio",
    "sqlite",
    "tls-rustls-aws-lc-rs",
    "uuid"
]

[workspace.lints.clippy]
derivable_impls = "allow"
