[package]
name = "eden-common"
description = "Common utilities for the Eden project"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dotenvy = "0.15.7"
rustls = "0.23.36"

error-stack = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.180"

[lints]
workspace = true
