[package]
name = "eden-config"
description = "Configuration for the Eden project"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eden-utils = { workspace = true, features = ["full"] }
eden-toml = { workspace = true }

constant_time_eq = "0.4.2"
error-stack = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml_edit = { workspace = true }
twilight-model = { workspace = true }

[dev-dependencies]
bon = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
unindent = { workspace = true }

[lints]
workspace = true
