[package]
name = "eden-database"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eden-sqlite = { path = "../eden-sqlite" }
eden-timestamps = { path = "../eden-timestamps", features = ["sqlx", "twilight"] }

bon = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
twilight-model = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
eden-common = { path = "../eden-common" }

claims = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
