[package]
name = "eden-database"
description = "Database schema definitions for Eden project"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eden-config = { workspace = true }
eden-prometheus = { path = "../eden-prometheus" }
eden-sqlite = { workspace = true }
eden-timestamp = { workspace = true, features = ["full"] }

bon = { workspace = true }
chrono = { workspace = true }
error-stack = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
twilight-model = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
claims = { workspace = true }
eden-utils = { workspace = true }
insta = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
