[package]
name = "eden-discord-bot"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eden-common = { path = "../eden-common" }
eden-config = { path = "../eden-config" }
eden-database = { path = "../eden-database" }
eden-kernel = { path = "../eden-kernel" }
eden-sqlite = { path = "../eden-sqlite" }
eden-text-handling = { path = "../eden-text-handling" }
eden-twilight = { path = "../eden-twilight" }

bon = { workspace = true }
error-stack = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
twilight-cache-inmemory = { workspace = true }
twilight-http = { workspace = true }
twilight-gateway = { workspace = true }
twilight-model = { workspace = true }
unindent = { workspace = true }

async-trait = "0.1.89"
crossbeam = "0.8.4"
splinter = { git = "https://github.com/memothelemo/splinter", rev = "479d7dd" }
twilight-standby = "0.17.0"

[lints]
workspace = true
