[package]
name = "eden-discord-bot"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eden-background-worker = { workspace = true }
eden-config = { workspace = true }
eden-core = { path = "../eden-core" }
eden-database = { workspace = true }
eden-sentry = { workspace = true }
eden-sqlite = { workspace = true }
eden-text-handling = { workspace = true }
eden-twilight = { workspace = true }
eden-utils = { workspace = true }

bon = { workspace = true }
erased-report = { workspace = true }
error-stack = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
num-format = "0.4.4"
rand = { workspace = true }
regex = "1.12.3"
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
twilight-cache-inmemory = { workspace = true }
twilight-http = { workspace = true }
twilight-gateway = { workspace = true }
twilight-mention = { workspace = true }
twilight-model = { workspace = true }
twilight-util = { workspace = true }
unindent = { workspace = true }

crossbeam = "0.8.4"
splinter = { git = "https://github.com/memothelemo/splinter", rev = "479d7dd" }
twilight-standby = "0.17.0"

[lints]
workspace = true
