[package]
name = "eden-gateway-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eden-common = { path = "../eden-common" }
eden-database = { path = "../eden-database" }
eden-kernel = { path = "../eden-kernel" }
eden-sqlite = { path = "../eden-sqlite" }

tower = "0.5.3"
tower-layer = "0.3.3"
tower-service = "0.3.3"

erased-report = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
twilight-model = { workspace = true }
uuid = { workspace = true }
mime = "0.3.17"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
dashmap = { version = "6.1.0", features = ["serde"] }

[dependencies.axum]
version = "0.8.8"
default-features = false
features = [
    "http1",
    "json",
    "macros",
    "matched-path",
    "query",
    "tokio",
    "tower-log",
    "tracing"
]

[dev-dependencies]
claims = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
