[package]
name = "eden-http-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eden-database = { path = "../eden-database" }
eden-kernel = { path = "../eden-kernel" }

serde = { workspace = true }
twilight-model = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
