[package]
name = "eden-kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eden-common = { path = "../eden-common" }
eden-config = { path = "../eden-config" }
eden-sqlite = { path = "../eden-sqlite" }

bon = { workspace = true }
error-stack = { workspace = true }

[lints]
workspace = true
