[package]
name = "eden-kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eden-common = { path = "../eden-common" }
eden-config = { path = "../eden-config" }
eden-database = { path = "../eden-database" }
eden-sqlite = { path = "../eden-sqlite" }

bon = { workspace = true }
error-stack = { workspace = true }
twilight-cache-inmemory = { workspace = true }
twilight-http = { workspace = true }

[lints]
workspace = true
