[package]
name = "eden-prometheus"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
error-stack = { workspace = true }
prometheus = { version = "0.14.0", default-features = false }
thiserror = { workspace = true }

[lints]
workspace = true
