[package]
name = "eden-sentry"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eden-config = { workspace = true }
erased-report = { workspace = true }
error-stack = { workspace = true }
http = "1.4.0"
itertools = "0.14.0"
sentry = { workspace = true }
strip-ansi-escapes = "0.2.1"

[dev-dependencies]
eden-sqlite = { workspace = true }
insta = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
