[package]
name = "eden-sqlite"
description = "Convenience crate for creating SQLite pools with sqlx"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bon = { workspace = true }
erased-report = { workspace = true }
error-stack = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
