[package]
name = "eden-text-handling"
description = "Text handling crate for the Eden project"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
comrak = { version = "0.50.0", default-features = false, features = ["bon"] }
regex = "1.12.3"
rustrict = { version = "0.7.26", features = ["customize"] }
url = "2.5.8"

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "processing"
harness = false
path = "benches/processing.rs"

[[bench]]
name = "swearing"
harness = false
path = "benches/swearing.rs"
