[package]
name = "eden-timestamps"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
twilight = ["dep:twilight-model"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, optional = true }
twilight-model = { workspace = true, optional = true }

[dev-dependencies]
claims = { workspace = true }
eden-common = { path = "../eden-common" }
eden-sqlite = { path = "../eden-sqlite" }

[lints]
workspace = true
