[package]
name = "eden-utils"
description = "Common utilities for the Eden project"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
full = [
    "dep:futures",
    "dep:pin-project-lite",
    "dep:rustls",
    "dep:serde",
    "dep:tempfile",
    "dep:tokio",
    "dep:tracing-subscriber"
]

[dependencies]
dotenvy = "0.15.7"
error-stack = { workspace = true }
thiserror = { workspace = true }

# dependencies that require full feature to be included
futures = { workspace = true, optional = true }
percent-encoding = { workspace = true }
pin-project-lite = { version = "*", optional = true }
rustls = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.180"

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
