[package]
name = "eden-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eden-background-worker = { workspace = true }
eden-config = { workspace = true }
eden-database = { workspace = true }
eden-gateway-api = { path = "../gateway-api", features = ["server"] }
eden-sqlite = { workspace = true }
eden-text-handling = { workspace = true }
eden-twilight = { workspace = true }
eden-utils = { workspace = true }

bon = { workspace = true }
dashmap = { version = "6.1.0", features = ["serde"] }
erased-report = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
twilight-http = { workspace = true }
twilight-model = { workspace = true }
twilight-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
