[package]
name = "eden-gateway-api"
description = "Eden's Gateway API types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
server = ["dep:eden-database", "dep:eden-validation", "dep:validator"]

[dependencies]
eden-timestamp = { workspace = true }
serde = { workspace = true }
twilight-model = { workspace = true }
uuid = { workspace = true }

eden-database = { workspace = true, optional = true }
eden-validation = { workspace = true, optional = true }
validator = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
